--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vue/compiler-sfc": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.13.0",
-    "eslint-plugin-vue": "^7.1.0"
+    "eslint-plugin-vue": "^7.1.0",
+    "worker-plugin": "^5.0.0"
   },
   "author": {
     "name": "Vinayak Kulkarni",
